--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Processed.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Processed.cshtml
@@ -4,6 +4,14 @@
     ViewData["Title"] = "Processed";
 }
 
+@{
+    if (!Model.ConnectedToServices)
+    {
+        <div class="alert alert-danger" role="alert">
+            Unable to connect to depending services.
+        </div>
+    }
+}
 
 <div class="container">
     <div class="row">
