Added upload page to ClientFacade vision section

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout.cshtml
@@ -74,6 +74,7 @@
                         <a class="dropdown-item" href="/Vision">Index</a>
                         <a class="dropdown-item" href="/Vision/Processed">Processed</a>
                         <a class="dropdown-item" href="/Vision/Known">Known</a>
+                        <a class="dropdown-item" href="/Vision/Upload">Upload</a>
                         <a class="dropdown-item" href="/Vision/Settings">Settings</a>
                     </div>
                 </li>
