--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Upload.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Upload.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Upload</h2>
 
-<form method="post" class="form-horizontal" enctype="multipart/form-data">
+@*<form method="post" class="form-horizontal" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Person.Name" class="col-md-2 control-label"></label>
@@ -20,6 +20,29 @@
         <div class="col-md-10">
             <input asp-for="Base64Photo" type="file" class="form-control" style="height:auto" />
             <span asp-validation-for="Base64Photo" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button id="btnSave" type="submit" class="btn btn-primary">Save</button>
+        </div>
+    </div>
+</form>*@
+
+<form method="post" class="form-horizontal" enctype="multipart/form-data">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="Customer.Name" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="Customer.Name" class="form-control" />
+            <span asp-validation-for="Customer.Name" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="Customer.Phote" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="Customer.Phote" type="file" class="form-control" style="height:auto" />
+            <span asp-validation-for="Customer.Phote" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
