--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Index.cshtml
@@ -14,7 +14,7 @@
     }
 }
 
-<div class="container">
+@*<div class="container">
     <h4>New Data</h4>
     <hr>
     <div class="row">
@@ -26,7 +26,7 @@
         </div>
     </div>
     <br />
-</div>
+</div>*@
 
 <div class="container">
     <div class="row">
