--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Upload.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Upload.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Upload</h2>
 
-@*<form method="post" class="form-horizontal" enctype="multipart/form-data">
+<form method="post" class="form-horizontal" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Person.Name" class="col-md-2 control-label"></label>
@@ -16,10 +16,10 @@
         </div>
     </div>
     <div class="form-group">
-        <label asp-for="Base64Photo" class="col-md-2 control-label"></label>
+        <label asp-for="Photo" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <input asp-for="Base64Photo" type="file" class="form-control" style="height:auto" />
-            <span asp-validation-for="Base64Photo" class="text-danger"></span>
+            <input asp-for="Photo" type="file" class="form-control" style="height:auto" />
+            <span asp-validation-for="Photo" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
@@ -27,9 +27,9 @@
             <button id="btnSave" type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
-</form>*@
+</form>
 
-<form method="post" class="form-horizontal" enctype="multipart/form-data">
+@*<form method="post" class="form-horizontal" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Customer.Name" class="col-md-2 control-label"></label>
@@ -50,4 +50,4 @@
             <button id="btnSave" type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
-</form>
+</form>*@
