--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Upload.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Upload.cshtml
@@ -9,10 +9,10 @@
 <form method="post" class="form-horizontal" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="Person.Name" class="col-md-2 control-label"></label>
+        <label asp-for="Name" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <input asp-for="Person.Name" class="form-control" />
-            <span asp-validation-for="Person.Name" class="text-danger"></span>
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
