--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Index.cshtml
@@ -35,7 +35,6 @@
             <hr>
 
             <div class="row">
-                @*@foreach (var snap in Model.Snapshots)*@
                 @for (int i = 0; i < Model.Snapshots.Count(); i++)
                 {
                     <div class="col-md-4">
@@ -60,10 +59,7 @@
                             <br />
                         </div>
 
-                    @*foreach (var person in Model.Snapshots[i].People)
-                    {
-
-                        @*<script>
+                                                @*<script>
                             $(document).ready(function () {
 
                                 //var c = document.getElementById("canvas");
@@ -112,8 +108,7 @@
                                 c.lineWidth = 1;
                                 c.strokeStyle = 'black';
                                 c.stroke();
-                            });</script>
-                    }*@
+                            });</script>*@
                 }
             </div>
         </div>
