--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Known.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Known.cshtml
@@ -23,28 +23,29 @@
             <div class="row">
                 @for (int i = 0; i < Model.Snapshots.Count(); i++)
                 {
-                    foreach (var person in Model.Snapshots[i].People)
-                    {
-
-
-                        <div class="col-md-4">
-                            @*<div class="col-md-6 d-flex align-items-stretch">*@
-                            <div class="card">
-                                @*<canvas id="canvas" width="300" height="300">
-                                        Sorry, your browser doesn't support the &lt;canvas&gt; element.
-                                    </canvas>*@
-                                <img id="@person.Name.Replace(" ", string.Empty)@Model.Snapshots[i].ImageName.Replace(" ", string.Empty)" class="card-img-top" src="@Model.Snapshots[i].ImageDir" alt="Card image cap">
-                                <div class="card-body">
-                                    <h5 class="card-title">@Model.Snapshots[i].DateTimeWhenCaptured.ToString()</h5>
-                                    <p class="card-text">@person.Name</p>
-                                    @*<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>*@
-                                    <a href="#" class="btn btn-primary">Show All Occurences</a>
-                                </div>
+                    <div class="col-md-4">
+                        @*<div class="col-md-6 d-flex align-items-stretch">*@
+                        <div class="card">
+                            @*<canvas id="canvas" width="300" height="300">
+                                    Sorry, your browser doesn't support the &lt;canvas&gt; element.
+                                </canvas>*@
+                            <img class="card-img-top" src="@Model.Snapshots[i].ImageDir" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">@Model.Snapshots[i].DateTimeWhenCaptured.ToString()</h5>
+                                <p class="card-text">
+                                    @foreach (var person in Model.Snapshots[i].People)
+                                    {
+                                        @person.Name<text> </text>
+                                    }
+                                </p>
+                                @*<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>*@
+                                <a href="#" class="btn btn-primary">Show All Occurences</a>
                             </div>
-                            <br />
                         </div>
+                        <br />
+                    </div>
 
-                        @*<script>
+                    @*<script>
                             $(document).ready(function () {
 
                                 //var c = document.getElementById("canvas");
@@ -67,7 +68,7 @@
                                 c.lineWidth = 1;
                                 c.strokeStyle = 'black';
                                 c.stroke();
-                            });</script>*@
+                            });</script>
 
                         <script>
                             (function () {
@@ -93,8 +94,7 @@
                                 c.lineWidth = 1;
                                 c.strokeStyle = 'black';
                                 c.stroke();
-                            });</script>
-                    }
+                            });</script>*@
                 }
             </div>
         </div>
