--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout.cshtml
@@ -64,8 +64,8 @@
                     <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
                 </li>
                 @*<li class="nav-item">
-                <a class="nav-link" href="/Vision">Vision</a>
-            </li>*@
+            <a class="nav-link" href="/Vision">Vision</a>
+        </li>*@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="/Vision" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Vision
@@ -80,6 +80,9 @@
                     </div>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/Events">Events</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/Crawler">Crawler</a>
                 </li>
                 <li class="nav-item">
@@ -92,11 +95,11 @@
                     <a class="nav-link" href="/Notifications">Notifications</a>
                 </li>
                 @*<a class="nav-link dropdown-toggle" href="/Notifications" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Notifications
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="/Notifications">Index</a>
-            </div>*@
+            Notifications
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/Notifications">Index</a>
+        </div>*@
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
