--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Index.cshtml
@@ -4,5 +4,45 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Events</h2>
+<br />
 
+<table class="table table-striped table-dark">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Location</th>
+            <th scope="col">Date</th>
+            <th scope="col">Manage</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>
+                <button type="button" class="btn btn-dark">Manage</button>
+                <button type="button" class="btn btn-link">Go To Event</button>
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>
+                <button type="button" class="btn btn-dark">Manage</button>
+                <button type="button" class="btn btn-link">Go To Event</button>
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>
+                <button type="button" class="btn btn-dark">Manage</button>
+                <button type="button" class="btn btn-link">Go To Event</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
