Added a new message to the index page of the clientfacade

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Index.cshtml
@@ -19,8 +19,8 @@
     <tbody>
         <tr>
             <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
+            <td>Seatle Eastside</td>
+            <td>@DateTime.Now</td>
             <td>
                 <button type="button" class="btn btn-dark">Manage</button>
                 <button type="button" class="btn btn-link">Go To Event</button>
@@ -28,17 +28,8 @@
         </tr>
         <tr>
             <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>
-                <button type="button" class="btn btn-dark">Manage</button>
-                <button type="button" class="btn btn-link">Go To Event</button>
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
+            <td>Seattle</td>
+            <td>@DateTime.Now</td>
             <td>
                 <button type="button" class="btn btn-dark">Manage</button>
                 <button type="button" class="btn btn-link">Go To Event</button>
