--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Index.cshtml
@@ -5,13 +5,13 @@
 }
 
 <div class="jumbotron">
-    <h1>Dashboard</h1>
-    <p class="lead">We saw this on your camera today:..</p>
-    <p class="lead">Your plants are blank today:..</p>
+    @*<h1>Landing Page</h1>*@
+    <p class="lead">To make an apple pie from scratch you must first invent the universe.</p>
+    <p class="lead">@*Your plants are blank today:..*@</p>
 </div>
 
-<h4>Dashboard</h4>
+@*<h4>Dashboard</h4>
 <hr>
 
 <p>Graph about vision</p>
-<p>Graph about plants</p>
+<p>Graph about plants</p>*@
