--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Index.cshtml
@@ -23,7 +23,7 @@
             <td>@DateTime.Now</td>
             <td>
                 <button type="button" class="btn btn-dark">Manage</button>
-                <button type="button" class="btn btn-link">Go To Event</button>
+                <button type="button" class="btn btn-link"><a href="/Events/Event">Go To Event</a></button>
             </td>
         </tr>
         <tr>
