Added over the Hackathon Handler _Layout and am working to get it functional with the Events/Event index

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
@@ -2,6 +2,7 @@
 @model Lazztech.ObsidianPresences.ClientFacade.Pages.Events.Event.IndexModel
 @{
     ViewData["Title"] = "Index";
+    Layout = "/Shared/_Layout_HackathonHandler.cshtml";
 }
 @{
     /**/
