--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
@@ -2,7 +2,7 @@
 @model Lazztech.ObsidianPresences.ClientFacade.Pages.Events.Event.IndexModel
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Shared/_Layout_HackathonHandler.cshtml";
+    Layout = "/Pages/Shared/_Layout_HackathonHandler.cshtml";
 }
 @{
     /**/
