Added over the index page of the HackathonHandler admin site to Events/Admin

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Index.cshtml
@@ -22,7 +22,7 @@
             <td>Seatle Eastside</td>
             <td>@DateTime.Now</td>
             <td>
-                <button type="button" class="btn btn-dark">Manage</button>
+                <button type="button" class="btn btn-dark"><a href="/Events/Admin">Admin</a></button>
                 <button type="button" class="btn btn-link"><a href="/Events/Event">Go To Event</a></button>
             </td>
         </tr>
