Added some responsive styling to the table on Events/Admin/Mentors

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Mentors/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Mentors/Index.cshtml
@@ -9,9 +9,13 @@
 <p>Number of mentors: @Model.Mentors.Count()</p>
 <a class="btn btn-primary" href="/Mentors/Create">Add New</a>
 @*<a class="btn btn-primary" href="/Mentors/PullMentors">@ViewBag.MentorsToPull New Mentors To Pull From SRND</a>*@
+<br />
+<br />
+
 @using (Html.BeginForm())
 {
-    <table class="table table-hover">
+<div class="col">
+    <table class="table table-striped table-dark table-responsive">
         <thead>
             <tr>
                 <td></td>
@@ -38,6 +42,7 @@
             }
         </tbody>
     </table>
+</div>
 }
 
 
