--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Sms/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Sms/Index.cshtml
@@ -2,7 +2,40 @@
 @model Lazztech.ObsidianPresences.ClientFacade.Pages.Events.Admin.Sms.IndexModel
 @{
     ViewData["Title"] = "Index";
+    var properties = typeof(HackathonManager.DTO.SmsDto).GetProperties();
 }
 
-<h2>Index</h2>
+<h2>Sms Log</h2>
+<br />
+<br />
 
+@using (Html.BeginForm())
+{
+    <div class="col">
+        <table class="table table-striped table-dark table-responsive">
+            <thead>
+                <tr>
+                    @{
+                        foreach (var property in properties)
+                        {
+                            <th>@property.Name</th>
+                        }
+                    }
+                </tr>
+            </thead>
+            <tbody>
+                @{
+                    foreach (var sms in Model.Messages)
+                    {
+                        <tr>
+                            @foreach (var value in sms.GetType().GetProperties())
+                            {
+                                <td>@value.GetValue(sms, null)</td>
+                            }
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
+    </div>
+}
