--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Teams/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Teams/Index.cshtml
@@ -32,7 +32,7 @@
                 foreach (var judge in Model.Teams)
                 {
                     <tr>
-                        <td><a class="btn btn-primary" href="/Teams/Edit?id=@judge.GuidId">Edit</a></td>
+                        <td><a class="btn btn-primary" href="Teams/Edit?id=@judge.GuidId">Edit</a></td>
                         @foreach (var value in judge.GetType().GetProperties())
                         {
                             <td>@value.GetValue(judge, null)</td>
