--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Index.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Manage Event</h2>
+<br />
+<br />
 
 <div class="row">
     <div class="col-md-4">
@@ -12,16 +14,16 @@
         <p>
             Number of Mentors: @Model.Mentors.Count()
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <button type="button" class="btn btn-dark"><a href="Admin/Mentors">Manage Mentors</a></button>
     </div>
     <div class="col-md-4">
         <h2>Teams</h2>
         <p>Number of registered Teams: @Model.Teams.Count()</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <button type="button" class="btn btn-dark"><a href="Admin/Teams">Manage Teams</a></button>
     </div>
     <div class="col-md-4">
         <h2>Judges</h2>
         <p>Number registered Judges: @Model.Judges.Count()</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <button type="button" class="btn btn-dark"><a href="Admin/Judges">Manage Judges</a></button>
     </div>
 </div>
