--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Index.cshtml
@@ -14,17 +14,17 @@
         <p>
             Number of Mentors: @Model.Mentors.Count()
         </p>
-        <button type="button" class="btn btn-dark"><text href="Admin/Mentors">Manage Mentors</text></button>
+        <button type="button" class="btn btn-dark"><a href="Admin/Mentors">Manage Mentors</a></button>
     </div>
     <div class="col">
         <h3>Teams</h3>
         <p>Number of registered Teams: @Model.Teams.Count()</p>
-        <button type="button" class="btn btn-dark"><text href="Admin/Teams">Manage Teams</text></button>
+        <button type="button" class="btn btn-dark"><a href="Admin/Teams">Manage Teams</a></button>
     </div>
     <div class="col">
         <h3>Judges</h3>
         <p>Number registered Judges: @Model.Judges.Count()</p>
-        <button type="button" class="btn btn-dark"><text href="Admin/Judges">Manage Judges</text></button>
+        <button type="button" class="btn btn-dark"><a href="Admin/Judges">Manage Judges</a></button>
     </div>
 </div>
 <br />
