Got the Add New Mentor working to go to the create page

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Mentors/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Mentors/Index.cshtml
@@ -13,7 +13,7 @@
 {
     <div class="col">
         <p>Number of mentors: @Model.Mentors.Count()</p>
-        <a class="btn btn-primary" href="/Mentors/Create">Add New</a>
+        <a class="btn btn-primary" href="Mentors/Create">Add New</a>
         @*<a class="btn btn-primary" href="/Mentors/PullMentors">@ViewBag.MentorsToPull New Mentors To Pull From SRND</a>*@
         <br />
         <br />
