--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Judges/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Judges/Index.cshtml
@@ -1,47 +1,72 @@
 ﻿@page
 @model Lazztech.ObsidianPresences.ClientFacade.Pages.Events.Admin.Judges.IndexModel
+
 @{
     ViewData["Title"] = "Index";
-    var properties = typeof(HackathonManager.Judge).GetProperties();
 }
 
-<h2>Judges</h2>
-<br />
-<br />
+<h2>Index</h2>
 
-@using (Html.BeginForm())
-{
-    <div class="col">
-        <a class="btn btn-primary" href="/Judges/Create">Add New</a>
-        <br />
-        <br />
-
-        <table class="table table-striped table-dark table-responsive">
-            <thead>
-                <tr>
-                    <td></td>
-                    @{
-                        foreach (var property in properties)
-                        {
-                            <th>@property.Name</th>
-                        }
-                    }
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                    foreach (var judge in Model.Judges)
-                    {
-                        <tr>
-                            <td><a class="btn btn-primary" href="/Judges/Edit?id=@judge.GuidId">Edit</a></td>
-                            @foreach (var value in judge.GetType().GetProperties())
-                            {
-                                <td>@value.GetValue(judge, null)</td>
-                            }
-                        </tr>
-                    }
-                }
-            </tbody>
-        </table>
-    </div>
+<p>
+    <a asp-page="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Judge[0].Event)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Judge[0].FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Judge[0].LastName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Judge[0].Image)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Judge[0].ProfessionalTitle)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Judge[0].Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Judge[0].Email)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model.Judge) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Event)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Image)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProfessionalTitle)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
 }
+    </tbody>
+</table>
