--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Teams/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Teams/Index.cshtml
@@ -1,47 +1,48 @@
 ﻿@page
 @model Lazztech.ObsidianPresences.ClientFacade.Pages.Events.Admin.Teams.IndexModel
+
 @{
     ViewData["Title"] = "Index";
-    var properties = typeof(HackathonManager.PocoModels.Team).GetProperties();
 }
 
-<h2>Teams</h2>
-<br />
-<br />
+<h2>Index</h2>
 
-@using (Html.BeginForm())
-{
-<div class="col">
-    <a class="btn btn-primary" href="/Teams/Create">Add New</a>
-    <br />
-    <br />
-    <table class="table table-striped table-dark table-responsive">
-        <thead>
-            <tr>
-                <td></td>
-                @{
-                    foreach (var property in properties)
-                    {
-                        <th>@property.Name</th>
-                    }
-                }
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                foreach (var judge in Model.Teams)
-                {
-                    <tr>
-                        <td><a class="btn btn-primary" href="Teams/Edit?id=@judge.GuidId">Edit</a></td>
-                        @foreach (var value in judge.GetType().GetProperties())
-                        {
-                            <td>@value.GetValue(judge, null)</td>
-                        }
-                    </tr>
-                }
-            }
-        </tbody>
-    </table>
-</div>
+<p>
+    <a asp-page="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Team[0].Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Team[0].Location)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Team[0].PinNumber)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model.Team) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Location)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PinNumber)
+            </td>
+            <td>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
 }
-
+    </tbody>
+</table>
