Setup the navbar links to Judges and Teams pages

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout_HackathonHandler.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout_HackathonHandler.cshtml
@@ -57,8 +57,8 @@
             <a class="navbar-brand" href="/">Hackathon Handler</a>
             <div class="navbar-collapse collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item"><a href="Teams/" class="nav-link">Teams</a></li>
-                    <li class="nav-item"><a href="Judges/" class="nav-link">Judges</a></li>
+                    <li class="nav-item"><a href="Event/Teams/" class="nav-link">Teams</a></li>
+                    <li class="nav-item"><a href="Event/Judges/" class="nav-link">Judges</a></li>
                 </ul>
                 @*@if (teamCookieValue != "")*@
                 {
