--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Teams/Create.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Teams/Create.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model Lazztech.ObsidianPresences.ClientFacade.Pages.Events.Admin.Teams.CreateModel
 
+@using HackathonManager;
+
 @{
     ViewData["Title"] = "Create";
 }
@@ -20,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Team.Location" class="control-label"></label>
-                <select asp-for="Team.Location" class="form-control"></select>
+                <select asp-for="Team.Location" asp-items="@Html.GetEnumSelectList<RoomNameEnum>()" class="form-control"></select>
                 <span asp-validation-for="Team.Location" class="text-danger"></span>
             </div>
             <div class="form-group">
