--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
@@ -62,7 +62,7 @@
             {
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLongTitle">Re-enter your pin to request @mentor.FirstName's assistance</h5>
+                        <h5 class="modal-title" id="exampleModalLongTitle">Enter your details to help @mentor.FirstName find you</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -70,10 +70,12 @@
                     <div class="modal-body">
                         <form>
                             <div class="form-group">
-                                @Html.TextBox("teamPin", null, htmlAttributes: new { @class = "form-control", @placeholder = "Team Pin", @type = "number" })
+                                @Html.TextBox("teamName", null, htmlAttributes: new { @class = "form-control", @placeholder = "Team name", @type = "text" })
+                                <br />
+                                @Html.TextBox("teamLocation", null, htmlAttributes: new { @class = "form-control", @placeholder = "Description of where you're sitting", @type = "text" })
                                 @Html.Hidden("mentorGuidId", mentor.Id)
                                 <br />
-                                <small id="emailHelp" class="form-text text-muted">You only have to enter your pin once to log in and enable your teams real time updates, however you must re-enter your pin upon each request.</small>
+                                <small id="emailHelp" class="form-text text-muted">After selecting submit your mentor will be notified and come to help out.</small>
                             </div>
                         </form>
                     </div>
